--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header><img src='https://cdn-icons-png.flaticon.com/512/2964/2964514.png'> Personal </header>
         <div class="container">
             <div class="row">
-                <button type="button" class="btn btn-primary btn-lg btn-block">
+                <button type="button" id="buttonImc" class="btn btn-primary btn-lg btn-block">
                     <img src='https://cdn-icons-png.flaticon.com/512/563/563777.png'>Cáculo IMC </button><br>
             </div>
             <div class="row">
@@ -41,13 +41,11 @@
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-lg-12 col-12">
                                 <div id="displayImc">
-                                    <p>Seu IMC é de 0.2 kg/m2.De acordo com a Organização Mundial da Saúde, seu IMC está
-                                        abaixo do recomendado para a sua altura. Para atingir um valor de IMC normal,
-                                        seu peso deve estar entre 362.5 e 522.5 kg.</p>
+                                    <p>Seu IMC é de 0.2</p>
                                 </div>
                             </div>
                         </div>
-                        <button type="button" id="closeImc" class="btn btn-danger">Fechar</button><br>
+                        <button type="button" id="closeImc" class="btn btn-danger btn-lg btn-block">Fechar</button><br>
                     </div>
                 </div>
             </div>
