--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Personal</title>
 </head>
 
@@ -23,6 +23,11 @@
                 <div class="col-md-12 col-sm-12 col-lg-12 col-12">
                     <div id="showImc">
                         <h2>Cálculo IMC</h2>
+                        <div id="selectGenderImc">
+                            <button type="button" class="btn btn-primary btn-lg">Homem</button>
+                            <button type="button" id="pinkbutton" class="btn btn-primary btn-lg">Mulher</button>
+                        </div>
+                        <div id="showInputsImc">
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
                                 <span class="input-group-text" id="basic-addon1">Peso</span>
@@ -37,11 +42,19 @@
                             <input type="text" class="form-control" placeholder="Digite a altura"
                                 ria-describedby="basic-addon1">
                         </div>
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="basic-addon1">Idade</span>
+                            </div>
+                            <input type="text" class="form-control" placeholder="Digite a idade"
+                                ria-describedby="basic-addon1">
+                        </div>
                         <button type="button" class="btn btn-warning btn-lg btn-block">Calcular</button><br>
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-lg-12 col-12">
                                 <div id="displayImc">
                                     <p>Seu IMC é de 0.2</p>
+                                </div>
                                 </div>
                             </div>
                         </div>
@@ -51,6 +64,10 @@
             </div>
         </div>
     </div>
+    <footer>
+        <img src='https://cdn-icons-png.flaticon.com/512/2964/2964514.png'>
+        Copyright © 2022 Vinicios da Silva Santos 
+    </footer>
 </body>
 <script src="script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
